by Cynthia at 8/9/21:44 完成了入学必备的大部分功能 修改了一点点工具类代码 todo: 动画以及上升下浮效果

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.retrofit_version = '2.3.0'
     ext.kotlin_version = '1.2.50'
     ext.anko_version='0.10.5'
+    ext.support_version = '26.0.1'
     repositories {
         google()
         jcenter()
