--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.github.bumptech.glide:glide:3.8.0'
     implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation 'com.jude:fitsystemwindowlayout:2.1.5'
     implementation "com.android.support:support-v4:$support_version"
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.android.support:recyclerview-v7:$support_version"
