--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.AdmissionRequestActivity">
         </activity>
-        <activity android:name=".ui.activity.strategy.RevealActivity">
+        <activity android:name=".ui.activity.strategy.RevealActivity"/>
+        <activity android:name=".ui.activity.MilitaryTrainingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
