2018-8-10 微小的贡献*2
Signed-off-by: hosigus <hosigus9733@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.activity.AdmissionRequestActivity">
+        </activity>
+        <activity android:name=".ui.activity.strategy.RevealActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
