--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activity.CquptMienActivity">
         <activity android:name=".ui.activity.AdmissionRequestActivity">
+        </activity>
+        <activity android:name=".ui.activity.strategy.RevealActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
