by Cynthia at 8/11/17:58 完成了校园攻略的入口框架 修复测试的时候出现的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.CquptMienActivity">
-
-        </activity>
+        <activity android:name=".ui.activity.CquptMienActivity"></activity>
         <activity android:name=".ui.activity.AdmissionRequestActivity">
+        </activity>
+        <activity android:name=".ui.activity.strategy.RevealActivity"></activity>
+        <activity android:name=".ui.activity.MilitaryTrainingActivity"></activity>
+        <activity android:name=".ui.activity.CampusStrategyEntranceActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity android:name=".ui.activity.strategy.RevealActivity">
-
-        </activity>
-        <activity android:name=".ui.activity.MilitaryTrainingActivity">
-
         </activity>
     </application>
 
