by Cynthia at 8/13 代替f神上传了线上交流的部分 本人只是修改了一部分代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.CquptMienActivity"></activity>
-        <activity android:name=".ui.activity.AdmissionRequestActivity"></activity>
-        <activity android:name=".ui.activity.strategy.RevealActivity"></activity>
-        <activity android:name=".ui.activity.MilitaryTrainingActivity"></activity>
+        <activity android:name=".ui.activity.CquptMienActivity" />
+        <activity android:name=".ui.activity.AdmissionRequestActivity" />
+        <activity android:name=".ui.activity.strategy.RevealActivity" />
+        <activity android:name=".ui.activity.MilitaryTrainingActivity" />
         <activity android:name=".ui.activity.MainActivity">
+        </activity>
+        <activity android:name=".ui.activity.ChatOnlineActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activity.ChatOnlineActivity"></activity>
-        <activity android:name=".ui.activity.CampusStrategyEntranceActivity"></activity>
-        <activity android:name=".ui.activity.CampusDataDetailActivity"></activity>
+        <activity android:name=".ui.activity.campus.CampusStrategyEntranceActivity" />
+        <activity android:name=".ui.activity.campus.CampusDataDetailActivity" />
     </application>
 
 </manifest>
