--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity android:name=".ui.activity.ChatOnlineActivity" />
         <activity android:name=".ui.activity.campus.CampusStrategyEntranceActivity" />
         <activity android:name=".ui.activity.campus.CampusDataDetailActivity" />
-        <activity android:name=".ui.activity.PhotoViewerActivity"/>
+        <activity android:name=".ui.activity.PhotoViewerActivity" />
+        <activity android:name=".ui.activity.strategy.SameStrategyActivity" />
+        <activity android:name=".ui.activity.strategy.DormitoryStrategyActivity"/>
     </application>
+
 </manifest>
