--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,11 @@
         <activity android:name=".ui.activity.campus.CampusStrategyEntranceActivity" />
         <activity android:name=".ui.activity.campus.CampusDataDetailActivity" />
         <activity android:name=".ui.activity.PhotoViewerActivity" />
-        <activity android:name=".ui.activity.strategy.SameStrategyMVPActivity" />
         <activity android:name=".ui.activity.strategy.DormitoryStrategyActivity" />
-        <activity android:name=".ui.activity.WordsActivity"></activity>
+        <activity android:name=".ui.activity.ReportingProcessActivity" />
+        <activity android:name=".ui.activity.ReportingProcessMoreActivity" />
+        <activity android:name=".ui.activity.strategy.SameStrategyMVPActivity" />
+        <activity android:name=".ui.activity.WordsActivity" />
     </application>
 
 </manifest>
