引入ShadowLayout的库 优化卡顿

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,12 @@ dependencies {
 
     implementation 'com.jude:fitsystemwindowlayout:2.1.5'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
     implementation('com.github.chrisbanes:PhotoView:2.1.4') {
+        exclude group: 'com.android.support'
+    }
+
+    implementation('com.github.devlight.shadowlayout:library:1.0.2') {
         exclude group: 'com.android.support'
     }
 }
