--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
     }
     buildToolsVersion '27.0.3'
+    configurations.all {
+        resolutionStrategy {
+            force "com.android.support:appcompat-v7:$support_version"
+            force "com.android.support:support-v4:$support_version"
+        }
+    }
 }
 
 dependencies {
@@ -50,7 +56,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
     implementation 'com.google.code.gson:gson:2.8.1'
-    implementation 'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.github.bumptech.glide:glide:4.0.0'
 
     implementation 'com.jude:fitsystemwindowlayout:2.1.5'
     implementation 'com.makeramen:roundedimageview:2.3.0'
